Fix z-index issues

--- a/backend/src/assets/css/location-list.css
+++ b/backend/src/assets/css/location-list.css
@@ -1,6 +1,5 @@
 section.location-list {
   margin: 0 10px;
-  max-width: 500px;
   display: flex;
   flex-direction: column;
   align-items: center;
