--- a/backend/src/assets/css/locations.css
+++ b/backend/src/assets/css/locations.css
@@ -49,7 +49,6 @@ div.locations .info-box {
   div.locations div.col-2 {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     margin-top: 3px;
     padding: 1px;
   }
